--- a/readme
+++ b/readme
@@ -10,13 +10,14 @@ CaloriesChecker:
 6) output calorie range per day
 
 
-
-
-
-
-
 activity multiplier: sedentary = 1.2
                      lightly active = 1.375
                      moderately active = 1.55
                      very active = 1.725
                      extra active = 1.9
+                     
+MealPlanner:
+
+1) ...
+
+
