--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
+This is just a side project for my own personal benefit that helps me practice coding in python
+
 CaloriesChecker:
 
 1) user inputs gender, age, weight, height, activity level
