--- a/readme
+++ b/readme
@@ -54,3 +54,19 @@ This app needs ...
 - improved UI
 - a progress tab which shows progress from start week, present, and sets reasonable goal recommendations for next week
 - improved options for prefilling daily list view headers (push day every week, every 3 days, etc). This will help with the progress tab too
+
+11/27/24 thoughts:
+
+TODO:
+
+high priority:
+- fix bug in 'add exercise' ... when you add more than one originally it crashes, editing exercise works fine
+- add progress page
+
+medium priority:
+- implement on apple watch OS
+
+low priority:
+- daily list prefill options
+
+
